Added youtube links and download buttons

--- a/hypetrain.html
+++ b/hypetrain.html
@@ -38,6 +38,15 @@
 		  </div>
 	    </div>
 		
+		<div class ="row" id="checkbuttons">
+	      <div class ="col-md-6 text-center">
+			<a href="downloads/HYPETRAINalphaWindows.zip" class="btn btn-custom">Download (Windows)</a>
+	      </div>
+		  <div class ="col-md-6 text-center">
+			<a href="downloads/HYPETRAINalphaMac.zip" class="btn btn-custom">Download (Mac)</a>
+		  </div>
+	    </div>
+		
 	   </div>
       </div>
     </div>
