--- a/incognitowl.html
+++ b/incognitowl.html
@@ -38,6 +38,21 @@
 		  </div>
 	    </div>
 		
+		<div class ="row">
+		  <div class ="col-md-8">
+			<p>Here's me talking over a game</p>
+		  </div>
+		  <div class ="col-md-4">
+			<iframe width="560" height="315" src="http://www.youtube.com/embed/LPURaqmMQsQ" frameborder="0" allowfullscreen></iframe>
+	      </div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+		  <div class ="col-md-12 text-center">
+			<a href="http://people.ucsc.edu/~bjarvine/IncognitOwl/" class="btn btn-custom">Play Online</a>
+		  </div>
+	    </div>
+		
 	   </div>
       </div>
     </div>
