--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@
 		  </div>
 		  <div class ="col-md-4">
 			<div class="thumbnail">
-                <img id="me" src="images/ursa_logo.jpg">
+                <img src="images/ursa_logo.jpg">
             </div>
 	      </div>
 	    </div>
