Added .ico, title images, more to non-home pages

--- a/dreamlock.html
+++ b/dreamlock.html
@@ -3,6 +3,8 @@
 
   <head>
     
+	<title>Hayden Platt - Game Designer</title>
+	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -30,7 +32,7 @@
         <div class ="row">
 	      <div class ="col-md-4">
 			<div class="thumbnail">
-                <img src="images/dreamlock_screen.png">
+                <img src="images/dino.png">
             </div>
 	      </div>
 		  <div class ="col-md-8">
@@ -56,6 +58,10 @@
 	   </div>
       </div>
     </div>
+	
+	<div class ="col-md-12 text-center">
+		<p id="footer">© Hayden Platt</p>
+	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
