--- a/hypetrain.html
+++ b/hypetrain.html
@@ -3,6 +3,8 @@
 
   <head>
     
+	<title>Hayden Platt - Game Designer</title>
+	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -39,17 +41,19 @@
 	    </div>
 		
 		<div class ="row" id="checkbuttons">
-	      <div class ="col-md-6 text-center">
+	      <div class ="col-md-12 text-center">
 			<a href="downloads/HYPETRAINalphaWindows.zip" class="btn btn-custom">Download (Windows)</a>
-	      </div>
-		  <div class ="col-md-6 text-center">
 			<a href="downloads/HYPETRAINalphaMac.zip" class="btn btn-custom">Download (Mac)</a>
-		  </div>
+	      </div>
 	    </div>
 		
 	   </div>
       </div>
     </div>
+	
+	<div class ="col-md-12 text-center">
+		<p id="footer">© Hayden Platt</p>
+	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
