--- a/incognitowl.html
+++ b/incognitowl.html
@@ -3,6 +3,8 @@
 
   <head>
     
+	<title>Hayden Platt - Game Designer</title>
+	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -28,34 +30,38 @@
             <div class ="row">
             <h2>IncognitOwl</h2>
         <div class ="row">
-	      <div class ="col-md-4">
-			<div class="thumbnail">
-                <img src="images/incognitowl_screen.png">
-            </div>
-	      </div>
 		  <div class ="col-md-8">
 			<p>So is this one</p>
 		  </div>
+	      <div class ="col-md-4">
+			<div class="thumbnail">
+                <img src="images/tyton.png">
+            </div>
+	      </div>
 	    </div>
 		
 		<div class ="row">
-		  <div class ="col-md-8">
-			<p>Here's me talking over a game</p>
-		  </div>
-		  <div class ="col-md-4">
+		  <div class ="col-md-6">
 			<iframe width="560" height="315" src="http://www.youtube.com/embed/LPURaqmMQsQ" frameborder="0" allowfullscreen></iframe>
 	      </div>
+		  <div class ="col-md-6">
+			<p>Here's me talking over a game</p>
+		  </div>
 	    </div>
 		
 		<div class ="row" id="checkbuttons">
 		  <div class ="col-md-12 text-center">
-			<a href="http://people.ucsc.edu/~bjarvine/IncognitOwl/" class="btn btn-custom">Play Online</a>
+			<a href="browser.html" class="btn btn-custom">Play In Browser!</a>
 		  </div>
 	    </div>
 		
 	   </div>
       </div>
     </div>
+	
+	<div class ="col-md-12 text-center">
+		<p id="footer">© Hayden Platt</p>
+	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
