--- a/dreamlock.html
+++ b/dreamlock.html
@@ -5,6 +5,8 @@
     
 	<title>Hayden Platt - Game Designer</title>
 	
+	<link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico" />
+	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -28,25 +30,44 @@
     <div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
-            <h2>Dreamlock</h2>
+				<div class ="col-md-12 text-center" id="title"><img src="images/dreamlock_title.png"></div>
         <div class ="row">
-	      <div class ="col-md-4">
+		  <div class ="col-md-1"></div>
+	      <div class ="col-md-3">
 			<div class="thumbnail">
-                <img src="images/dino.png">
+                <img src="images/tiger_leaping2.png">
             </div>
 	      </div>
-		  <div class ="col-md-8">
-			<p>This game is cool</p>
+		  <div class ="col-md-7" id="gametext" style="padding-top:40px">
+			<p>After falling into a deep sleep, a small dinosaur
+			finds himself stuck at the bottom of a multi-layered 
+			dream. And what better way to wake up from a dream 
+			than by activating a robot elephant or being mauled 
+			by a tiger? The dino's subconscious mind is full of 
+			bizarre and puzzling scenarios in which he must find
+			a way to shock himself awake. That is, awake into the 
+			next layer. Will he ever escape this Dreamlock?</p>
 		  </div>
+		  <div class ="col-md-1"></div>
 	    </div>
 		
 		<div class ="row">
-		  <div class ="col-md-8">
-			<p>Here's me talking over a game</p>
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-6" id="gametext" style="padding-top:60px">
+			<p>This game was a game project I took on Freshman Year 
+			for Brenda Romero's Foundations of Interactive Game 
+			Design class at UCSC. My partner and I used GameMaker 
+			to create the game in a little over 8 weeks. We went on 
+			to receive an Honorable Mention for the game's charming 
+			aesthetic and dreamlike art-style. If interested in 
+			learning more about Dreamlock, feel free to check out 
+			my commentary video on the right, or download the game 
+			below!</p>
 		  </div>
-		  <div class ="col-md-4">
-			<iframe width="560" height="315" src="http://www.youtube.com/embed/qoSwJPaEU4g" frameborder="0" allowfullscreen></iframe>
+		  <div class ="col-md-4" style="padding-top:50px">
+			<iframe width="360" height="260" src="http://www.youtube.com/embed/qoSwJPaEU4g" frameborder="0" allowfullscreen></iframe>
 	      </div>
+		  <div class ="col-md-1"></div>
 	    </div>
 		
 		<div class ="row" id="checkbuttons">
