--- a/hypetrain.html
+++ b/hypetrain.html
@@ -5,6 +5,8 @@
     
 	<title>Hayden Platt - Game Designer</title>
 	
+	<link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico" />
+	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -28,22 +30,22 @@
     <div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
-            <h2>Project HYPETRAIN</h2>
+				<div class ="col-md-12 text-center" id="title"><img src="images/hypetrain_title.png"></div>
         <div class ="row">
-	      <div class ="col-md-4">
+	      <div class ="col-md-6">
 			<div class="thumbnail">
-                <img src="images/hypetrain_screen.png">
+                <img src="images/hypetrain_page.png">
             </div>
 	      </div>
-		  <div class ="col-md-8">
+		  <div class ="col-md-6" id="gametext" style="padding-top:40px">
 			<p>Work in progress</p>
 		  </div>
 	    </div>
 		
 		<div class ="row" id="checkbuttons">
 	      <div class ="col-md-12 text-center">
-			<a href="downloads/HYPETRAINalphaWindows.zip" class="btn btn-custom">Download (Windows)</a>
-			<a href="downloads/HYPETRAINalphaMac.zip" class="btn btn-custom">Download (Mac)</a>
+			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download Alpha (Windows)</a>
+			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download Alpha (Mac)</a>
 	      </div>
 	    </div>
 		
