--- a/incognitowl.html
+++ b/incognitowl.html
@@ -5,6 +5,8 @@
     
 	<title>Hayden Platt - Game Designer</title>
 	
+	<link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico" />
+	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -28,24 +30,40 @@
     <div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
-            <h2>IncognitOwl</h2>
+				<div class ="col-md-12 text-center" id="title"><img src="images/incognitowl_title.png"></div>
         <div class ="row">
-		  <div class ="col-md-8">
-			<p>So is this one</p>
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-7" id="gametext" style="padding-top:60px">
+			<p>Jax Tallon, the Hoot Corps' first IncognitOwl, embarks on a 
+			mission to use reconnaissance rather than violence to solve the 
+			dispute between Owls and Bats. Set up traps and plan missions 
+			by day, then execute infiltrations by night. Learn to utilize 
+			both the day's point and click tower-defense style mechanics 
+			and  the night's arrow-key sneaking controls to become the world's 
+			first IncognitOwl.</p>
 		  </div>
-	      <div class ="col-md-4">
+	      <div class ="col-md-3">
 			<div class="thumbnail">
                 <img src="images/tyton.png">
             </div>
 	      </div>
+		  <div class ="col-md-1"></div>
 	    </div>
 		
 		<div class ="row">
-		  <div class ="col-md-6">
-			<iframe width="560" height="315" src="http://www.youtube.com/embed/LPURaqmMQsQ" frameborder="0" allowfullscreen></iframe>
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-4" style="padding-top:30px">
+			<iframe width="360" height="260" src="http://www.youtube.com/embed/LPURaqmMQsQ" frameborder="0" allowfullscreen></iframe>
 	      </div>
-		  <div class ="col-md-6">
-			<p>Here's me talking over a game</p>
+		  <div class ="col-md-6" id="gametext" style="padding-top:30px">
+			<p>IncognitOwl was made with a team of 4 during my Sophomore Year
+			at UCSC, for David Wessman's Game Design Experience class. From a
+			concept that originates back to a joke I made outside a grocery 
+			store, IncognitOwl quickly grew into so much more as a result of 
+			several late nights. Our passion and drive for making this game 
+			made working in a bigger team for the first time a breeze. To learn
+			more about our process check out the video to the left, or try the 
+			game for your self below!</p>
 		  </div>
 	    </div>
 		
@@ -54,7 +72,7 @@
 			<a href="browser.html" class="btn btn-custom">Play In Browser!</a>
 		  </div>
 	    </div>
-		
+		<div class ="col-md-1"></div>
 	   </div>
       </div>
     </div>
