--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
         <div class ="row">
 	      <div class ="col-md-4">
 			<h3>Dreamlock</h3>
-			<p>Help the little dinosuar shock himself out of a multilayered dream and return to reality in this artistic puzzle platformer.</p>
+			<p>Help the little dinosuar shock himself out of a multilayered dream and return to reality in this artistic puzzle platformer!</p>
 	      </div>
 		  <div class ="col-md-4">
 			<h3>IncognitOwl</h3>
-			<p>As the Owl army’s first IncognitOwl, set up your sneaking missions by day, and execute them by night in order to gain invaluable intel and take down the wicked Bat army.</p>
+			<p>As the Owl army’s first IncognitOwl, set up your sneaking missions by day, and execute them by night in order to gain 
+			invaluable intel and take down the wicked Bat army!</p>
 		  </div>
 		  <div class ="col-md-4">
 			<h3>Project HYPETRAIN</h3>
-			<p>Take to the tracks in this high-speed action platformer, looting a moving train in an attempt to pull off the hypest heist the Wild West has ever seen!</p>
+			<p>Take to the tracks in this high-speed action platformer, looting a moving train in an attempt to pull off the hypest heist the 
+			Wild West has ever seen!</p>
 		  </div>
 	    </div>
 	    
