--- a/IncognitOwl/browser.html
+++ b/IncognitOwl/browser.html
@@ -15,7 +15,8 @@
 	
 <body onload="checkCookie()" id="browser">
 
-	<div class="jumbotron"></div>
+    <img id="owl" src="../images/jax.png">
+    <img id="bat" src="../images/bat.png">
 	
     <canvas id='canvas' width="840" height="630"></canvas>
     <script src="brine.js"></script>
@@ -30,14 +31,10 @@
     <script src="level3.js"></script>
     <script src="cookieMan.js"></script>
 	
-	<div class ="row" id="checkbuttons">
-		  <div class ="col-md-12 text-center">
-			<a href="../index.html" class="btn btn-custom" id="browser">Return to Site</a>
-	</div>
-	</div>
-	<div class ="col-md-12 text-center">
-		<p>© Hayden Platt</p>
-	</div>
+
+	<a href="../index.html" class="btn btn-custom" id="browser">Return to Site</a>
+	
+	<p>© Hayden Platt</p>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
