--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
             </div>
 	      </div>
 		  <div class ="col-md-8">
-			<h3>An Game Designer</h3>
+			<h3>A Game Designer</h3>
 				<p>Games for me create experiences and emotions 
 				unlike any other medium. This passion paired with 
 				my love for computers has led me to a career in 
