--- a/dreamlock.html
+++ b/dreamlock.html
@@ -35,10 +35,12 @@
 		  <div class ="col-md-1"></div>
 	      <div class ="col-md-3">
 			<div class="thumbnail">
-                <img src="images/tiger_leaping2.png">
+                <img src="images/tiger_leaping2.png" style="padding-top:50px">
             </div>
 	      </div>
-		  <div class ="col-md-7" id="gametext" style="padding-top:40px">
+		  <div class ="col-md-7" id="gametext" style="padding-top:20px">
+			<p>Role: Designer/Programmer</p>
+			<p>Developed In: GameMaker</p>
 			<p>After falling into a deep sleep, a small dinosaur
 			finds himself stuck at the bottom of a multi-layered 
 			dream. And what better way to wake up from a dream 
