--- a/hypetrain.html
+++ b/hypetrain.html
@@ -38,6 +38,8 @@
             </div>
 	      </div>
 		  <div class ="col-md-6" id="gametext" style="padding-top:40px">
+			<p>Role: Project Lead/Designer/Programmer</p>
+			<p>Developed In: Unity</p>
 			<p>Work in progress</p>
 		  </div>
 	    </div>
