--- a/incognitowl.html
+++ b/incognitowl.html
@@ -33,7 +33,9 @@
 				<div class ="col-md-12 text-center" id="title"><img src="images/incognitowl_title.png"></div>
         <div class ="row">
 		  <div class ="col-md-1"></div>
-		  <div class ="col-md-7" id="gametext" style="padding-top:60px">
+		  <div class ="col-md-7" id="gametext" style="padding-top:20px">
+		    <p>Role: Lead Designer/Programmer/Writer</p>
+			<p>Developed In: Javascript</p>
 			<p>Jax Tallon, the Hoot Corps' first IncognitOwl, embarks on a 
 			mission to use reconnaissance rather than violence to solve the 
 			dispute between Owls and Bats. Set up traps and plan missions 
@@ -65,11 +67,12 @@
 			more about our process check out the video to the left, or try the 
 			game for your self below!</p>
 		  </div>
+		  <div class ="col-md-1"></div>
 	    </div>
 		
 		<div class ="row" id="checkbuttons">
 		  <div class ="col-md-12 text-center">
-			<a href="IncognitOwl/browser.html" class="btn btn-custom">Play In Browser!</a>
+			<a href="incognitowl/browser.html" class="btn btn-custom">Play In Browser!</a>
 		  </div>
 	    </div>
 		<div class ="col-md-1"></div>
