--- a/hypetrain.html
+++ b/hypetrain.html
@@ -6,6 +6,7 @@
 	<title>Hayden Platt - Game Designer</title>
 	
 	<link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
 	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
