--- a/aboutme.html
+++ b/aboutme.html
@@ -81,7 +81,7 @@
     </div>
 	
 	<div class ="col-md-12 text-center">
-		<p id="footer">© Hayden Platt</p>
+		<p id="footer">Â© Hayden Platt</p>
 	</div>
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
