Updated Navbar, added portfolio.html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
           <li><a href="aboutme.html">About Me</a></li>
         </ul>
         <ul class ="pull-right">
-          <li><a href="dreamlock.html">Dreamlock</a></li>
-          <li><a href="incognitowl.html">Incognitowl</a></li>
-          <li><a href="hypetrain.html">Project HYPETRAIN</a></li>
+		  <li class="dropdown">
+              <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="dreamlock.html">Dreamlock</a></li>
+				<li><a href="incognitowl.html">Incognitowl</a></li>
+				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
+		      </ul>
+		  </li>
+		  
+          
         </ul>
       </div>
     </div>
@@ -110,6 +117,63 @@
 		  <div class ="col-md-4 text-center">
 			<a href="hypetrain.html" type="button" class="btn btn-custom">Check It Out</a>
 		  </div>
+	    </div>
+		
+	   </div>
+      </div>
+    </div>
+	
+	<div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+            <h2>Who is Hayden Platt?</h2>
+        <div class ="row">
+		  <div class ="col-md-1"></div>
+	      <div class ="col-md-3">
+			<div class="thumbnail">
+                <img id="me" src="images/me_small.png">
+            </div>
+	      </div>
+		  <div class ="col-md-7">
+			<h3>A Game Designer</h3>
+				<p>Games for me create experiences and emotions 
+				unlike any other medium. This passion paired with 
+				my love for computers has led me to a career in 
+				video game design. Currently leading a student project, 
+				it is my personal goal to create a game that exceeds 
+				the trends and formulas that are appearing in the 
+				industry. I'm in it to make genuinely innovative, 
+				engaging experiences with great people.</p>
+		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-7">
+			<h3>A Leader</h3>
+				<p>The startup</p>
+		  </div>
+		  <div class ="col-md-3">
+			<div class="thumbnail">
+                <a href="http://ursamajorgames.com"><img src="images/ursa_logo.jpg"></a>
+            </div>
+	      </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-3">
+			<div class="thumbnail">
+                <img src="images/work_sesh.jpg">
+            </div>
+	      </div>
+		  <div class ="col-md-7">
+			<h3>A Student</h3>
+				<p>Working hard</p>
+		  </div>
+		  <div class ="col-md-1"></div>
 	    </div>
 		
 	   </div>
