--- a/incognitowl.html
+++ b/incognitowl.html
@@ -21,9 +21,14 @@
           <li><a href="aboutme.html">About Me</a></li>
         </ul>
         <ul class ="pull-right">
-          <li><a href="dreamlock.html">Dreamlock</a></li>
-          <li><a href="incognitowl.html">IncognitOwl</a></li>
-          <li><a href="hypetrain.html">Project HYPETRAIN</a></li>
+          <li class="dropdown">
+              <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="dreamlock.html">Dreamlock</a></li>
+				<li><a href="incognitowl.html">Incognitowl</a></li>
+				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
+		      </ul>
+		  </li>
         </ul>
       </div>
     </div>
