--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<title>Hayden Platt - Game Designer</title>
 	
 	<link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
 	
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
@@ -34,6 +34,59 @@
     </div>
     
     <div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+				<div class ="col-md-12 text-center" id="title"><img src="images/incognitowl_title.png"></div>
+        <div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-7" id="gametext" style="padding-top:20px">
+		    <p>Role: Lead Designer/Programmer/Writer</p>
+			<p>Developed In: Javascript</p>
+			<p>Jax Tallon, the Hoot Corps' first IncognitOwl, embarks on a 
+			mission to use reconnaissance rather than violence to solve the 
+			dispute between Owls and Bats. Set up traps and plan missions 
+			by day, then execute infiltrations by night. Learn to utilize 
+			both the day's point and click tower-defense style mechanics 
+			and  the night's arrow-key sneaking controls to become the world's 
+			first IncognitOwl.</p>
+		  </div>
+	      <div class ="col-md-3">
+			<div class="thumbnail">
+                <img src="images/tyton.png">
+            </div>
+	      </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-4" style="padding-top:30px">
+			<iframe width="360" height="260" src="http://www.youtube.com/embed/LPURaqmMQsQ" frameborder="0" allowfullscreen></iframe>
+	      </div>
+		  <div class ="col-md-6" id="gametext" style="padding-top:30px">
+			<p>IncognitOwl was made with a team of 4 during my Sophomore Year
+			at UCSC, for David Wessman's Game Design Experience class. From a
+			concept that originates back to a joke I made outside a grocery 
+			store, IncognitOwl quickly grew into so much more as a result of 
+			several late nights. Our passion and drive for making this game 
+			made working in a bigger team for the first time a breeze. To learn
+			more about our process check out the video to the left, or try the 
+			game for your self below!</p>
+		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+		  <div class ="col-md-12 text-center">
+			<a href="incognitowl/browser.html" class="btn btn-custom">Play In Browser!</a>
+		  </div>
+	    </div>
+		<div class ="col-md-1"></div>
+	   </div>
+      </div>
+    </div>
+	
+	<div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
 				<div class ="col-md-12 text-center" id="title"><img src="images/dreamlock_title.png"></div>
@@ -82,6 +135,34 @@
 		  <div class ="col-md-12 text-center">
 			<a href="downloads/Dreamlock.zip" class="btn btn-custom">Download</a>
 		  </div>
+	    </div>
+		
+	   </div>
+      </div>
+    </div>
+	
+	 <div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+				<div class ="col-md-12 text-center" id="title"><img src="images/hypetrain_title.png"></div>
+        <div class ="row">
+	      <div class ="col-md-6">
+			<div class="thumbnail">
+                <img src="images/hypetrain_page.png">
+            </div>
+	      </div>
+		  <div class ="col-md-6" id="gametext" style="padding-top:40px">
+			<p>Role: Project Lead/Designer/Programmer</p>
+			<p>Developed In: Unity</p>
+			<p>Work in progress</p>
+		  </div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+	      <div class ="col-md-12 text-center">
+			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download Alpha (Windows)</a>
+			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download Alpha (Mac)</a>
+	      </div>
 	    </div>
 		
 	   </div>
