--- a/aboutme.html
+++ b/aboutme.html
@@ -17,13 +17,12 @@
     <div class="nav">
       <div class="container">
         <ul class ="pull-left">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="index.html">HP</a></li>
         </ul>
         <ul class ="pull-right">
-          <li class="dropdown">
+		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
+              <ul class="dropdown-menu pull-right" role="menu">
                 <li><a href="dreamlock.html">Dreamlock</a></li>
 				<li><a href="incognitowl.html">Incognitowl</a></li>
 				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
