--- a/hypetrain.html
+++ b/hypetrain.html
@@ -17,13 +17,12 @@
     <div class="nav">
       <div class="container">
         <ul class ="pull-left">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="index.html">HP</a></li>
         </ul>
         <ul class ="pull-right">
-          <li class="dropdown">
+		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
+              <ul class="dropdown-menu pull-right" role="menu">
                 <li><a href="dreamlock.html">Dreamlock</a></li>
 				<li><a href="incognitowl.html">Incognitowl</a></li>
 				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
@@ -38,16 +37,18 @@
             <div class ="row">
 				<div class ="col-md-12 text-center" id="title"><img src="images/hypetrain_title.png"></div>
         <div class ="row">
-	      <div class ="col-md-6">
+		  <div class ="col-md-1"></div>
+	      <div class ="col-md-5">
 			<div class="thumbnail">
                 <img src="images/hypetrain_page.png">
             </div>
 	      </div>
-		  <div class ="col-md-6" id="gametext" style="padding-top:40px">
+		  <div class ="col-md-5" id="gametext" style="padding-top:40px">
 			<p>Role: Project Lead/Designer/Programmer</p>
 			<p>Developed In: Unity</p>
 			<p>Work in progress</p>
 		  </div>
+		  <div class ="col-md-1"></div>
 	    </div>
 		
 		<div class ="row" id="checkbuttons">
