Updated about me and HYPETRAIN page

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
         <ul class ="pull-left">
           <li><a href="index.html">HP</a></li>
         </ul>
-        <ul class ="pull-right">
+        <ul class ="pull-right" style="padding-top:10px">
 		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
@@ -45,11 +45,11 @@
 	      </div>
 		  <div class ="col-md-7">
 			<h3>A Game Designer</h3>
-				<p>Games for me create experiences and emotions 
+				<p style="font-size: 18px">Games for me create experiences and emotions 
 				unlike any other medium. This passion paired with 
 				my love for computers has led me to a career in 
 				video game design. Currently leading a student project, 
-				it is my personal goal to create a game that exceeds 
+				it's my personal goal to create a game that exceeds 
 				the trends and formulas that are appearing in the 
 				industry. I'm in it to make genuinely innovative, 
 				engaging experiences with great people.</p>
@@ -61,11 +61,19 @@
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-7">
 			<h3>A Leader</h3>
-				<p>The startup</p>
+				<p style="font-size: 18px">I've been naturally drawn to leadership
+				for as long as I can remember. Over the years
+				I've led many small teams, but this summer I 
+				wanted to really challenge myself. I chose to 
+				put internship
+				hunting on hold for a year, and lead a project
+				of my own. 8 months later, Ursa Major Games
+				released an Alpha I'm very proud of. Not a day
+				goes by where I don't love what we're doing.</p>
 		  </div>
 		  <div class ="col-md-3">
 			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/ursa_logo.jpg"></a>
+                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
             </div>
 	      </div>
 		  <div class ="col-md-1"></div>
@@ -75,12 +83,12 @@
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-3">
 			<div class="thumbnail">
-                <img src="images/work_sesh.jpg">
+                <img id="me" src="images/work_sesh.jpg">
             </div>
 	      </div>
 		  <div class ="col-md-7">
 			<h3>A Student</h3>
-				<p>Working hard</p>
+				<p style="font-size: 18px"></p>
 		  </div>
 		  <div class ="col-md-1"></div>
 	    </div>
