--- a/hypetrain.html
+++ b/hypetrain.html
@@ -19,7 +19,7 @@
         <ul class ="pull-left">
           <li><a href="index.html">HP</a></li>
         </ul>
-        <ul class ="pull-right">
+        <ul class ="pull-right" style="padding-top:10px">
 		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
@@ -35,7 +35,7 @@
     <div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
-				<div class ="col-md-12 text-center" id="title"><img src="images/hypetrain_title.png"></div>
+				<div class ="col-md-12 text-center" id="title"><img src="images/HYPE.png"></div>
         <div class ="row">
 		  <div class ="col-md-1"></div>
 	      <div class ="col-md-5">
@@ -43,11 +43,33 @@
                 <img src="images/hypetrain_page.png">
             </div>
 	      </div>
-		  <div class ="col-md-5" id="gametext" style="padding-top:40px">
+		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
 			<p>Role: Project Lead/Designer/Programmer</p>
 			<p>Developed In: Unity</p>
-			<p>Work in progress</p>
+			<p>Take to the tracks in this high-speed action platformer, looting 
+			a moving train in an attempt to pull off the biggest heist the Wild 
+			West has ever seen!</p>
 		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
+				<p>Project HYPETRAIN is a game currently being developed by 
+				the student startup studio I founded, Ursa Major Games. Whenever
+				we get a break from school, jobs, and the general craziness
+				of college, we pour our hearts into this game. Project HYPETRAIN
+				has the biggest team, as well as development cycle, I have ever
+				experienced. The result? A ton of leadership, design, and Unity 
+				experience, along with a badass train heist game that'll be sure
+				to get the HYPE flowing through your veins! Try it out!</p>
+		  </div>
+		  <div class ="col-md-3">
+			<div class="thumbnail">
+                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
+            </div>
+	      </div>
 		  <div class ="col-md-1"></div>
 	    </div>
 		
