--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class ="pull-left">
           <li><a href="index.html">HP</a></li>
         </ul>
-        <ul class ="pull-right">
+        <ul class ="pull-right" style="padding-top:10px">
 		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
@@ -89,7 +89,7 @@
 		  </div>
 		  <div class ="col-md-4 text-center">
 			<h3>Ursa Major Games</h3>
-			<p>Check out the company I founded, currently working on a game titled Project HYPETRAIN!</p>
+			<p>Check out the student studio I founded, currently working on a game titled Project HYPETRAIN!</p>
 			<a href="http://ursamajorgames.com" type="button" class="btn btn-custom">Check It Out</a>
 		  </div>
 		  <div class ="col-md-4 text-center">
