--- a/incognitowl.html
+++ b/incognitowl.html
@@ -19,7 +19,7 @@
         <ul class ="pull-left">
           <li><a href="index.html">HP</a></li>
         </ul>
-        <ul class ="pull-right">
+        <ul class ="pull-right" style="padding-top:10px">
 		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
