--- a/aboutme.html
+++ b/aboutme.html
@@ -88,7 +88,16 @@
 	      </div>
 		  <div class ="col-md-7">
 			<h3>A Student</h3>
-				<p style="font-size: 18px"></p>
+				<p style="font-size: 18px">While true that I'm
+				a student at UC Santa Cruz, that's not
+				the only place I do my learning. When I
+				play games, I'm learning. When I lead
+				projects, I'm learning. I've come to
+				realize that I'll never know everything
+				about games, but that's also what makes
+				creating them so great. While my title 
+				may change, I'll always be a student with
+				more to learn.</p>
 		  </div>
 		  <div class ="col-md-1"></div>
 	    </div>
