--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
 		  </div>
 		  <div class ="col-md-3">
 			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/ursa_logo.jpg"></a>
+                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
             </div>
 	      </div>
 		  <div class ="col-md-1"></div>
