--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
   <body>
     <div class="nav">
       <div class="container">
-        <ul class ="pull-left">
+        <ul id="init" class ="pull-left">
           <li><a href="index.html">HP</a></li>
         </ul>
-        <ul class ="pull-right" style="padding-top:10px">
+        <ul class ="pull-right" style="margin-top:8px">
 		  <li class="dropdown">
               <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
@@ -28,6 +28,9 @@
 				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
 		      </ul>
 		  </li>
+		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
+		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
+		  <li id="social"><a href="http://github.com/misterplatt"><img src="images/github_logo.png"></a></li>
         </ul>
       </div>
     </div>
@@ -102,9 +105,17 @@
 		  <div class ="col-md-1"></div>
 	    </div>
 		
+		<div class ="row" id="checkbuttons">
+		  <div class ="col-md-12 text-center">
+			<a href="downloads/Hayden_Platt_Resume.pdf" class="btn btn-custom">Resume</a>
+		  </div>
+		</div>
+		
 	   </div>
       </div>
     </div>
+	
+	
 	
 	<div class ="col-md-12 text-center">
 		<p id="footer">© Hayden Platt</p>
