--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav">
       <div class="container">
         <ul id="init" class ="pull-left">
-          <li><a href="index.html">HP</a></li>
+          <li><a href="index">HP</a></li>
         </ul>
         <ul class ="pull-right" style="margin-top:8px">
 		  <li class="dropdown">
