--- a/aboutme.html
+++ b/aboutme.html
@@ -17,15 +17,15 @@
     <div class="nav">
       <div class="container">
         <ul id="init" class ="pull-left">
-          <li><a href="index.html">HP</a></li>
+          <li><a href="http://haydenplatt.me/index">HP</a></li>
         </ul>
         <ul class ="pull-right" style="margin-top:8px">
 		  <li class="dropdown">
-              <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
+              <a href="http://haydenplatt.me/portfolio" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
-                <li><a href="dreamlock.html">Dreamlock</a></li>
-				<li><a href="incognitowl.html">Incognitowl</a></li>
-				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
+                <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
+				<li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
+				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
 		      </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
