--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div class="nav">
       <div class="container">
         <ul id="init" class ="pull-left">
-          <li><a href="index">HP</a></li>
+          <li><a href="http://haydenplatt.me/index">HP</a></li>
         </ul>
         <ul class ="pull-right" style="margin-top:8px">
 		  <li class="dropdown">
-              <a href="portfolio.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
+              <a href="http://haydenplatt.me/portfolio" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
-                <li><a href="dreamlock.html">Dreamlock</a></li>
-				<li><a href="incognitowl.html">Incognitowl</a></li>
-				<li><a href="hypetrain.html">Project HYPETRAIN</a></li>
+                <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
+				<li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
+				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
 		      </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
@@ -47,19 +47,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <a href="hypetrain.html"><img src="images/hypetrain_screen.png" alt="..."></a>
+      <a href="http://haydenplatt.me/hypetrain"><img src="images/hypetrain_screen.png" alt="..."></a>
       <div class="carousel-caption">
           <h3>Project HYPETRAIN</h3>
       </div>
     </div>
     <div class="item">
-	  <a href="incognitowl.html"><img src="images/incognitowl_screen.png" alt="..."></a>
+	  <a href="http://haydenplatt.me/incognitowl"><img src="images/incognitowl_screen.png" alt="..."></a>
       <div class="carousel-caption">
           <h3>IncognitOwl</h3>
       </div>
     </div>
     <div class="item">
-	  <a href="dreamlock.html"><img src="images/dreamlock_screen.png" alt="..."></a>
+	  <a href="http://haydenplatt.me/dreamlock"><img src="images/dreamlock_screen.png" alt="..."></a>
       <div class="carousel-caption">
           <h3>Dreamlock</h3>
       </div>
@@ -88,7 +88,7 @@
 		  <div class ="col-md-4 text-center">
 			<h3>About Me</h3>
 			<p>Figure out who exactly this "Hayden Platt" guy is.</p>
-			<a href="aboutme.html" type="button" class="btn btn-custom"><<</a>
+			<a href="http://haydenplatt.me/aboutme" type="button" class="btn btn-custom"><<</a>
 		  </div>
 		  <div class ="col-md-4 text-center">
 			<h3>Ursa Major Games</h3>
@@ -98,7 +98,7 @@
 		  <div class ="col-md-4 text-center">
 			<h3>Projects</h3>
 			<p>My works, both inside and outside the classroom.</p>
-			<a href="portfolio.html" type="button" class="btn btn-custom">>></a>
+			<a href="http://haydenplatt.me/portfolio" type="button" class="btn btn-custom">>></a>
 	      </div>
 		  
 	    </div>
