Updated nav bar

--- a/incognitowl_game/browser.html
+++ b/incognitowl_game/browser.html
@@ -32,7 +32,7 @@
     <script src="cookieMan.js"></script>
 	
 
-	<a href="http://haydenplatt.me/index" class="btn btn-custom" id="browser">Return to Site</a>
+	<a href="http://haydenplatt.me" class="btn btn-custom" id="browser">Return to Site</a>
 	
 	<p>© Hayden Platt</p>
 	
