--- a/incognitowl.html
+++ b/incognitowl.html
@@ -17,14 +17,14 @@
     <div class="nav">
       <div class="container">
         <ul id="init" class ="pull-left">
-          <li><a href="http://haydenplatt.me/index">HP</a></li>
+          <li><a href="http://haydenplatt.me">HP</a></li>
         </ul>
         <ul class ="pull-right" style="margin-top:8px">
 		  <li class="dropdown">
               <a href="http://haydenplatt.me/portfolio" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu pull-right" role="menu">
+                <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
-				<li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
 				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
 		      </ul>
 		  </li>
