Updated Meow Page

--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -39,15 +39,15 @@
     <div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
-				<div class ="col-md-12 text-center" id="title"><img src="images/HYPE.png"></div>
+				<div class ="col-md-12 text-center" id="title"><img src="images/meow_title.png"></div>
         <div class ="row">
 		  <div class ="col-md-1"></div>
 	      <div class ="col-md-5">
-			<div class="thumbnail">
-                <img src="images/hypetrain_page.png">
+			<div class="thumbnail" style="padding-top:20px">
+                <img src="images/meow_screen.png">
             </div>
 	      </div>
-		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
+		  <div class ="col-md-5" id="gametext" style="padding-top:30px">
 			<p>Role: Lead Designer/Writer</p>
 			<p>Developed In: Unity (C#)</p>
 			<p>Two lovestruck cats are about to enter a long-distance
@@ -60,13 +60,16 @@
 		
 		<div class ="row">
 		  <div class ="col-md-1"></div>
-		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
-				<p>What Do We Do Meow was a game developed at the 2015 Global
-				Game Jam.</p>
+		  <div class ="col-md-7" id="gametext" style="padding-top:70px">
+				<p>What Do We Do Meow was developed at the 2015 Global
+				Game Jam. It was the first jam for all 5 of us, but I'm pretty
+				proud of what we came up with in a meager 48 hours. I learned
+		        a ton and had a blast, and will definitely be attending many
+				more jams in the future!</p>
 		  </div>
 		  <div class ="col-md-3">
 			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
+                <a href="http://globalgamejam.org/2015/games/what-do-we-do-meow-1"><img src="images/GGJ_logo.png"></a>
             </div>
 	      </div>
 		  <div class ="col-md-1"></div>
