--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -78,7 +78,7 @@
 		<div class ="row" id="checkbuttons">
 	      <div class ="col-md-12 text-center">
 			<a href="downloads/wdwd-meow(Win).zip" class="btn btn-custom">Download (Windows)</a>
-			<!--<a href="downloads/wdwd-meow(Mac).zip" class="btn btn-custom">Download (Mac)</a>-->
+			<a href="downloads/wdwd-meow(Mac).zip" class="btn btn-custom">Download (Mac)</a>
 	      </div>
 	    </div>
 		
