--- a/hypetrain.html
+++ b/hypetrain.html
@@ -49,7 +49,7 @@
 	      </div>
 		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
 			<p>Role: Project Lead/Designer/Programmer</p>
-			<p>Developed In: Unity (C#)</p>
+			<p>Developed In: Unity2D (C#)</p>
 			<p>Take to the tracks in this high-speed action platformer, looting 
 			a moving train in an attempt to pull off the biggest heist the Wild 
 			West has ever seen!</p>
