--- a/krabklashers.html
+++ b/krabklashers.html
@@ -39,21 +39,19 @@
     <div class = "neighborhood-guides">
         <div class="container">
             <div class ="row">
-				<div class ="col-md-12 text-center" id="title"><img src="images/HYPE.png"></div>
+				<div class ="col-md-12 text-center" id="title"><img src="images/krab_title.png"></div>
         <div class ="row">
 		  <div class ="col-md-1"></div>
 	      <div class ="col-md-5">
 			<div class="thumbnail">
-                <img src="images/hypetrain_page.png">
+                <img src="images/krab_model.png">
             </div>
 	      </div>
 		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
-			<p>Role: Lead Designer/Writer</p>
-			<p>Developed In: Unity2D (C#)</p>
-			<p>Two lovestruck cats are about to enter a long-distance
-			relationship, and the pesky phone bills aren't cheap. Earn
-			money through a series of odd jobs to try and make things 
-			work in this heart-wrenching short story-game.</p>
+			<p>Role: Project Level Designer/Scrum Master</p>
+			<p>Developed In: Unity3D (C#)</p>
+			<p>Klash with your friends in this 3D combat arena and compete
+			for the title of "Top Krab"! </p>
 		  </div>
 		  <div class ="col-md-1"></div>
 	    </div>
@@ -61,12 +59,18 @@
 		<div class ="row">
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
-				<p>What Do We Do Meow was a game developed at the 2015 Global
-				Game Jam.</p>
+				<p>Krab Klashers was a game developed in a software 
+				engineering class at UCSC, utilizing a Scrum development 
+				methodolgy. Our goal for the project is to familiarize 
+				ourselves with 3D and multiplayer game production, as it 
+				is a foreign field for all of us. We chose to keep the
+				game's mechanics relatively simple, yet still fun. By
+				keeping the scope in mind, the 5 of us were able to 
+				learn a ton about </p>
 		  </div>
 		  <div class ="col-md-3">
 			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
+                <a href="http://ursamajorgames.com"><img src="images/krab_screen.png"></a>
             </div>
 	      </div>
 		  <div class ="col-md-1"></div>
@@ -74,8 +78,8 @@
 		
 		<div class ="row" id="checkbuttons">
 	      <div class ="col-md-12 text-center">
-			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download (Windows)</a>
-			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download (Mac)</a>
+			<a href="downloads/KrabKlashers(Win).zip" class="btn btn-custom">Download(Windows)</a>
+			<a href="downloads/KrabKlashers(Mac).zip" class="btn btn-custom">Download(Mac)</a>
 	      </div>
 	    </div>
 		
