Updated meow text

--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -48,7 +48,7 @@
 			<p>Two lovestruck cats are about to enter a long-distance
 			relationship, and the pesky phone bills aren't cheap. Earn
 			money through a series of odd jobs to try and make things 
-			work in this heart-wrenching short story-game.</p>
+			work in this brief, yet heart-wrenching story-game.</p>
 		  </div>
 	      <div class ="col-md-5">
 			<div class="thumbnail" style="padding-top:20px">
@@ -65,11 +65,13 @@
                 <a href="http://globalgamejam.org/2015/games/what-do-we-do-meow-1"><img src="images/GGJ_logo.png"></a>
             </div>
 	      </div>
-		  <div class ="col-md-7" id="gametext" style="padding-top:70px">
+		  <div class ="col-md-7" id="gametext" style="padding-top:50px">
 				<p>What Do We Do Meow was developed at the 2015 Global
 				Game Jam. It was the first jam for all 5 of us, but I'm pretty
 				proud of what we came up with in a meager 48 hours. I learned
-		        a ton and had a blast, and will definitely be attending many
+		        a lot about the importance of planning/storyboarding, as well
+				as how to effectively create under pressue. It was an 
+				unforgettable experience, and I'll definitely be attending many 
 				more jams in the future!</p>
 		  </div>
 		  <div class ="col-md-1"></div>
