Swapped Krab imgs

--- a/krabklashers.html
+++ b/krabklashers.html
@@ -51,7 +51,7 @@
 		  </div>
 		  <div class ="col-md-4">
 			<div class="thumbnail">
-                <img src="images/krab_model.png">
+                <img src="images/krab_screen.png">
             </div>
 	      </div>
 		  <div class ="col-md-1"></div>
@@ -61,7 +61,7 @@
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-4">
 			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/krab_screen.png"></a>
+                <a href="http://ursamajorgames.com"><img src="images/krab_model.png"></a>
             </div>
 	      </div>
 		  <div class ="col-md-6" id="gametext" style="padding-top:10px">
