Updates to KrabKlashers page

--- a/krabklashers.html
+++ b/krabklashers.html
@@ -44,8 +44,8 @@
         <div class ="row">
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-6" id="gametext" style="padding-top:20px">
-			<p>Role: Project Level Designer/Scrum Master</p>
-			<p>Developed In: Unity3D (C#)</p>
+			<p>Role: Level Designer/Scrum Master</p>
+			<p>Tools: <img src="images/Unity_Logo.png"><img src="images/Blender_Logo.png"></p>
 			<p>Klash with your friends in this 3D combat arena and compete
 			for the title of "Top Krab"! </p>
 		  </div>
@@ -61,7 +61,7 @@
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-4">
 			<div class="thumbnail">
-                <a href="http://ursamajorgames.com"><img src="images/krab_model.png"></a>
+                <img src="images/krab_model.png">
             </div>
 	      </div>
 		  <div class ="col-md-6" id="gametext" style="padding-top:10px">
@@ -70,9 +70,10 @@
 				methodolgy. Our goal for the project was to familiarize 
 				ourselves with 3D and multiplayer game production, as it 
 				is a foreign field for all of us. We chose to keep the
-				game's mechanics relatively simple, yet still fun. By
-				keeping the scope in mind, the 5 of us were able to 
-				learn a ton about </p>
+				game's mechanics relatively simple, yet entertaining. By
+				keeping the scope under control, the 6 of us were able to 
+				gain a ton of experience with several areas of game design
+				we had yet to explore.</p>
 		  </div>
 		  <div class ="col-md-1"></div>
 	    </div>
